# research-to-decision-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MANIFESTO.md  README.md  README.zh-CN.md  SECURITY.md  SOURCES.md  pyproject.toml
.cursor/: environment.json
.github/ISSUE_TEMPLATE/: bug_report.md  fictional_example.md  field-test.yml  template_request.md
.github/workflows/: validate.yml
docs/: cli.md  github_actions_validate.template.yml  how_to_use.md  method_status.md  quickstart.md  roadmap.md  using_r2d_after_ai_prototype_review.md
examples/fictional-ai-governance-research-to-decision/: README.md  decision_brief.json  decision_memo.md  decision_report.md  evidence_matrix.md  feedback_log.md
modules/argument-quality/: README.md
modules/argument-quality/templates/: argument-quality-review.md
modules/decision-review/: README.md
modules/decision-review/prompts/: decision-red-team-prompt.md
modules/decision-review/scorecards/: decision-quality-scorecard.md
modules/decision-review/templates/: assumption-ledger.md  decision-brief-review.md  pre-mortem.md
modules/judgment-writing/: README.md
modules/judgment-writing/templates/: five-pass-writing-review.md
prompts/: critical-review-prompt.md  feedback-porting-prompt.md  public-artifact-transform-prompt.md  research-synthesis-prompt.md
scorecards/: decision-readiness-scorecard.md  research-evidence-scorecard.md
scripts/: audit.py
src/r2d/: __init__.py  cli.py  reporting.py  schema.py  scoring.py
src/r2d/data/: starter_decision_brief.json
templates/: decision-memo.md  evidence-matrix.md  feedback-log.md  problem-framing-canvas.md  public-artifact-brief.md
tests/: run_tests.py  test_boundaries.py  test_r2d.py
