
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-to-decision-toolkit"
version = "0.3.0"
description = "A small Python toolkit to validate and score a decision brief."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Anonymousyz"}]
dependencies = []

[project.scripts]
r2d = "r2d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
